--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
           </a>
         </div>
       </div>
-      <div class="container">
+      <!-- <div class="container">
         <div class="news__tabs">
           <div class="d-flex align-items-start">
             <div class="row">
@@ -567,7 +567,179 @@
             </div>
           </div>
         </div>
+      </div> -->
+      <div class="container">
+        <div class="news__tabs">
+          <div class="d-flex align-items-start">
+            <div id="carouselNews" class="carousel slide w-100 carousel-fade">
+              <div class="row">
+                <div class="col-12 col-lg-4 d-flex">
+                  <div class="d-sm-none d-lg-flex carousel-indicators news__tabs__nav nav-pills">
+                    <button type="button" data-bs-target="#carouselNews" data-bs-slide-to="0"
+                      class="active nav-link" aria-current="true" aria-label="Slide 1">
+                      <div class="new__tabs__nav__title">
+                        <h4>
+                          تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر الأحمر
+                          و
+                          جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في مجال
+                          الدراسات، والأبحاث التطويرية، والتدريب
+                        </h4>
+                      </div>
+                      <div class="new__tabs__nav_subtitle">
+                        <h5>
+                          تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر الأحمر
+                          و
+                          جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في مجال
+                          الدراسات، والأبحاث التطويرية، والتدريب
+                        </h5>
+                      </div>
+                    </button>
+                    <button type="button" data-bs-target="#carouselNews" data-bs-slide-to="1"
+                      aria-label="Slide 2" class="nav-link">
+                      <div class="new__tabs__nav__title">
+                        <h4>
+                          تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر الأحمر
+                          و
+                          جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في مجال
+                          الدراسات، والأبحاث التطويرية، والتدريب
+                        </h4>
+                      </div>
+                      <div class="new__tabs__nav_subtitle">
+                        <h5>
+                          تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر الأحمر
+                          و
+                          جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في مجال
+                          الدراسات، والأبحاث التطويرية، والتدريب
+                        </h5>
+                      </div>
+                    </button>
+                    <button type="button" data-bs-target="#carouselNews" data-bs-slide-to="2"
+                      aria-label="Slide 3" class="nav-link">
+                      <div class="new__tabs__nav__title">
+                        <h4>
+                          تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر الأحمر
+                          و
+                          جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في مجال
+                          الدراسات، والأبحاث التطويرية، والتدريب
+                        </h4>
+                      </div>
+                      <div class="new__tabs__nav_subtitle">
+                        <h5>
+                          تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر الأحمر
+                          و
+                          جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في مجال
+                          الدراسات، والأبحاث التطويرية، والتدريب
+                        </h5>
+                      </div>
+                    </button>
+                  </div>
+
+                </div>
+                <div class="col-12 col-lg-8 d-flex">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <div class="news__tabs__content__wrapper">
+                        <img src="./assets/img/dynamic/project-1.jpg" alt="">
+                        <div class="layer">
+                        </div>
+                        <div class="news__tabs__content__wrapper__description">
+                          <p>08 نوفمبر 2023</p>
+                          <h4>
+                            تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر
+                            الأحمر
+                            و
+                            جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في
+                            مجال
+                            الدراسات، والأبحاث التطويرية، والتدريب
+                          </h4>
+                          <h5>
+                            تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر
+                            الأحمر
+                            و
+                            جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في
+                            مجال
+                            الدراسات، والأبحاث التطويرية، والتدريب
+                          </h5>
+                          <a href="#" class="primary-btn">التفاصيل</a>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="carousel-item">
+                      <div class="news__tabs__content__wrapper">
+                        <img src="./assets/img/dynamic/project-2.jpg" alt="">
+                        <div class="layer">
+                        </div>
+                        <div class="news__tabs__content__wrapper__description">
+                          <p>08 نوفمبر 2023</p>
+                          <h4>
+                            تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر
+                            الأحمر
+                            و
+                            جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في
+                            مجال
+                            الدراسات، والأبحاث التطويرية، والتدريب
+                          </h4>
+                          <h5>
+                            تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر
+                            الأحمر
+                            و
+                            جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في
+                            مجال
+                            الدراسات، والأبحاث التطويرية، والتدريب
+                          </h5>
+                          <a href="#" class="primary-btn">التفاصيل</a>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="carousel-item">
+                      <div class="news__tabs__content__wrapper">
+                        <img src="./assets/img/dynamic/project-3.jpg" alt="">
+                        <div class="layer">
+                        </div>
+                        <div class="news__tabs__content__wrapper__description">
+                          <p>08 نوفمبر 2023</p>
+                          <h4>
+                            تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر
+                            الأحمر
+                            و
+                            جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في
+                            مجال
+                            الدراسات، والأبحاث التطويرية، والتدريب
+                          </h4>
+                          <h5>
+                            تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر
+                            الأحمر
+                            و
+                            جامعة_جازان، بهدف تعزيز التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في
+                            مجال
+                            الدراسات، والأبحاث التطويرية، والتدريب
+                          </h5>
+                          <a href="#" class="primary-btn">التفاصيل</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="d-sm-flex d-lg-none justify-content-end align-items-center gap-4">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselNews"
+                  data-bs-slide="prev">
+                  <i class='fa-solid fa-chevron-right '></i>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselNews"
+                  data-bs-slide="next">
+                  <i class='fa-solid fa-chevron-left '></i>
+                  <span class="visually-hidden">Next</span>
+                </button>
+
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+
+
     </section>
 
 
