--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html dir="rtl" lang="ar">
+<html dir="rtl" lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -277,11 +277,11 @@
           </div>
         </div>
         <div class="our-projects__owl-nav" dir="rtl">
-          <button id="prev"class='owl-prev'>
+          <button id="prev" class='owl-prev'>
             <i class="fa-solid fa-chevron-right owl-right-icon our-projects__owl-nav--right"></i>
             <!-- <i class="fa-solid fa-chevron-right owl-right-icon our-projects__owl-nav--left"></i> -->
           </button>
-          <button id="next"class='owl-next'>
+          <button id="next" class='owl-next'>
             <i class="fa-solid fa-chevron-left our-projects__owl-nav--left"></i>
             <!-- <i class="fa-solid fa-chevron-right our-projects__owl-nav--right"></i> -->
           </button>
@@ -421,7 +421,7 @@
           <a href="#">
             <span class="news__heading-action-text">مشاهدة الكل</span>
             <button class="news__heading-action-btn">
-            <i class="fa-solid fa-chevron-left"></i>
+              <i class="fa-solid fa-chevron-left"></i>
             </button>
           </a>
         </div>
@@ -431,40 +431,47 @@
 
     <section class="contact">
       <div class="container">
-      <div class="contact__heading">
-        <h2>معلومات الإتصال</h2>
-        <div class="contact__pattern">
-          <img src="./assets/img//dynamic/news-pattern.svg" alt="">
+        <div class="row">
+          <div class="col-7 contact__location">
+        <div class="contact__heading">
+          <h2>معلومات الإتصال</h2>
+          <div class="contact__pattern">
+            <img src="./assets/img//dynamic/news-pattern.svg" alt="">
+          </div>
         </div>
-      </div>
-      <div class="contact__content">
-        <p>سعداء باستقبالكم، كل یوم ثلاثاء، في تمام الساعة 10 ً صباحا</p>
-        <p>المؤسسة العامة للمحافظة على الشعب المرجانیة والسلاحف في البحر الأحمر</p>
-      </div>
-      <div class="row">
-        <div class="col-7">
-      <div class="contact__info">
-        <div>
-          <img src="" alt="">
-          <h5>البريد الإلكتروني</h5>
-          <p>ceo-office@shams.gov.sa</p>
+            <div class="contact__content">
+              <p class="contact__content-time">سعداء باستقبالكم، كل یوم ثلاثاء، في تمام الساعة 10 صباحا</p>
+              <p class="contact__content-location">المؤسسة العامة للمحافظة على الشعب المرجانیة والسلاحف في البحر الأحمر
+              </p>
+            </div>
+            <div class="contact__info">
+              <div class="contact__info-item">
+                <div class="contact__info-title">
+                  <i class="fa-solid fa-envelope"></i>
+                  <h5>البريد الإلكتروني</h5>
+                </div>
+                <p>ceo-office@shams.gov.sa</p>
+              </div>
+              <div class="contact__info-item">
+                <div class="contact__info-title">
+                  <i class="fa-solid fa-phone-volume"></i>
+                  <h5>رقم الهاتف</h5>
+                </div>
+                <p>00966 12 676 66666</p>
+              </div>
+              <div class="contact__info-item">
+                <div class="contact__info-title">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <h5>الموقع</h5>
+                </div>
+                <p>المركز الوطني للأرصاد الدور1 -الورود-جدة</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-5">
+            <div class="contact__social-content">sds</div>
+          </div>
         </div>
-        <div>
-          <img src="" alt="">
-          <h5>رقم الهاتف</h5>
-          <p>00966 12 676 66666</p>
-        </div>
-        <div>
-          <img src="" alt="">
-          <h5>الموقع</h5>
-          <p>المركز الوطني للأرصاد الدور1 -الورود-جدة</p>
-        </div>
-      </div>
-      </div>
-      <div class="col-5">
-        <div class="bg-blue-light contact__social-content"></div>
-      </div>
-      </div>
       </div>
     </section>
 
