--- a/gallery.html
+++ b/gallery.html
@@ -166,7 +166,7 @@
           <img src="./assets/img/dynamic/pattern-tree.svg" class="section-pattern__img" alt="">
         </div>
         <div class="section__content container">
-          <h3 class="section__title">تواصل معنا</h3>
+          <h3 class="section__title">المركز الإعلامي</h3>
           <a href="#content" class="section__btn"><i class="fa-solid fa-chevron-down"></i></a>
         </div>
       </div>
@@ -174,33 +174,134 @@
         <img src="./assets/img/dynamic/media-center-bg.webp" alt="section banner" />
       </div>
     </section>
-
-    <section class="contact-page">
+    <section class="media-center bg-mint" id="content">
       <div class="container">
-        <div class="row">
-          <div class="col-12 col-md-6 a">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt debitis
-            perspiciatis, odit ex excepturi iure necessitatibus vero laborum fugit magnam impedit dolor minima. Sint
-            corrupti voluptate iste at sit repudiandae.</div>
-          <div class="col-12 col-md-6 b">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quasi
-            repellat suscipit tempore voluptas porro ut ipsa quam debitis nobis, animi vitae aut nesciunt ex accusantium
-            labore sunt possimus quod?</div>
+        <h3 class="page__title">مكتبة الصور والفيديو</h3>
+        <div class="media-center__content">
+          <div class="row gx-4 gy-4">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+              <div class="media-center__content-img">
+                <img src="./assets/img/dynamic/media-center-1.webp" alt="media center image" />
+                <div class="media-center__desc">
+                  <span class="media-center__desc-title">الشعب المرجانية</span>
+                  <span class="media-center__desc-type">صورة</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+              <div class="media-center__content-img">
+                <img src="./assets/img/dynamic/media-center-2.webp" alt="media center image" />
+                <div class="media-center__desc">
+                  <span class="media-center__desc-title">سلاحف البحر الأحمر</span>
+                  <span class="media-center__desc-type">فيديو</span>
+                </div>
+
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+              <div class="media-center__content-img">
+                <img src="./assets/img/dynamic/media-center-1.webp" alt="media center image" />
+                <div class="media-center__desc">
+                  <span class="media-center__desc-title">الشعب المرجانية</span>
+                  <span class="media-center__desc-type">صورة</span>
+                </div>
+
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+              <div class="media-center__content-img">
+                <img src="./assets/img/dynamic/media-center-2.webp" alt="media center image" />
+                <div class="media-center__desc">
+                  <span class="media-center__desc-title">سلاحف البحر الأحمر</span>
+                  <span class="media-center__desc-type">فيديو</span>
+                </div>
+
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+              <div class="media-center__content-img">
+                <img src="./assets/img/dynamic/media-center-1.webp" alt="media center image" />
+                <div class="media-center__desc">
+                  <span class="media-center__desc-title">الشعب المرجانية</span>
+                  <span class="media-center__desc-type">صورة</span>
+                </div>
+
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+              <div class="media-center__content-img">
+                <img src="./assets/img/dynamic/media-center-2.webp" alt="media center image" />
+                <div class="media-center__desc">
+                  <span class="media-center__desc-title">سلاحف البحر الأحمر</span>
+                  <span class="media-center__desc-type">فيديو</span>
+                </div>
+
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+              <div class="media-center__content-img">
+                <img src="./assets/img/dynamic/media-center-1.webp" alt="media center image" />
+                <div class="media-center__desc">
+                  <span class="media-center__desc-title">الشعب المرجانية</span>
+                  <span class="media-center__desc-type">صورة</span>
+                </div>
+
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+              <div class="media-center__content-img">
+                <img src="./assets/img/dynamic/media-center-2.webp" alt="media center image" />
+                <div class="media-center__desc">
+                  <span class="media-center__desc-title">سلاحف البحر الأحمر</span>
+                  <span class="media-center__desc-type">فيديو</span>
+                </div>
+
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+              <div class="media-center__content-img">
+                <img src="./assets/img/dynamic/media-center-1.webp" alt="media center image" />
+                <div class="media-center__desc">
+                  <span class="media-center__desc-title">الشعب المرجانية</span>
+                  <span class="media-center__desc-type">صورة</span>
+                </div>
+
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+              <div class="media-center__content-img">
+                <img src="./assets/img/dynamic/media-center-2.webp" alt="media center image" />
+                <div class="media-center__desc">
+                  <span class="media-center__desc-title">سلاحف البحر الأحمر</span>
+                  <span class="media-center__desc-type">فيديو</span>
+                </div>
+
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+              <div class="media-center__content-img">
+                <img src="./assets/img/dynamic/media-center-1.webp" alt="media center image" />
+                <div class="media-center__desc">
+                  <span class="media-center__desc-title">الشعب المرجانية</span>
+                  <span class="media-center__desc-type">صورة</span>
+                </div>
+
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+              <div class="media-center__content-img">
+                <img src="./assets/img/dynamic/media-center-2.webp" alt="media center image" />
+                <div class="media-center__desc">
+                  <span class="media-center__desc-title">سلاحف البحر الأحمر</span>
+                  <span class="media-center__desc-type">فيديو</span>
+                </div>
+
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
-
-    <script>
-      function scrollToSection(sectionId) {
-        var section = document.getElementById(sectionId);
-        if (section) {
-          section.scrollIntoView({
-            behavior: 'smooth',
-            block: 'center'
-          });
-        }
-      }
-    </script>
-
-
   </main>
 
   <footer class="footer-container">
