--- a/partener.html
+++ b/partener.html
@@ -166,41 +166,28 @@
           <img src="./assets/img/dynamic/pattern-tree.svg" class="section-pattern__img" alt="">
         </div>
         <div class="section__content container">
-          <h3 class="section__title">تواصل معنا</h3>
+          <h3 class="section__title">شركاؤنا</h3>
           <a href="#content" class="section__btn"><i class="fa-solid fa-chevron-down"></i></a>
         </div>
       </div>
       <div class="section-pattern__banner">
-        <img src="./assets/img/dynamic/media-center-bg.webp" alt="section banner" />
+        <img src="./assets/img/dynamic/partener-bg.webp" alt="section banner" />
       </div>
     </section>
-
-    <section class="contact-page">
+    <section class="partener bg-mint" id="content">
       <div class="container">
-        <div class="row">
-          <div class="col-12 col-md-6 a">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt debitis
-            perspiciatis, odit ex excepturi iure necessitatibus vero laborum fugit magnam impedit dolor minima. Sint
-            corrupti voluptate iste at sit repudiandae.</div>
-          <div class="col-12 col-md-6 b">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quasi
-            repellat suscipit tempore voluptas porro ut ipsa quam debitis nobis, animi vitae aut nesciunt ex accusantium
-            labore sunt possimus quod?</div>
+        <h3 class="page__title">نبذة عن شركاء</h3>
+        <div class="partener__content">
+          <div class="partener__desc">
+            <p>المؤسسة العامة للمحافظة على للشعب المرجانية والسلاحف في البحر الأحمر هي مؤسسة حكومية سعودية تأسست بموجب قرار مجلس
+            الوزراء رقم (٢٥٠) بتاريخ ١٤٤٣/٠٤/٢٥ هجري و تهدف إلى التنظيم والإشراف والمحافظة على الشعب المرجانية والسلاحف وأماكن
+            تعشيشها في البحر الأحمر، وإدارتها وإنمائها واستدامتها، والعمل على إعادة تأهيل الشعب المرجانية المتدهورة ومواقع تعشيش
+            السلاحف .وذلك من خلال تسخير الخبرات المحلية والعالمية لتنفيذ حلول مبتكرة لمراقبة وإعادة تأهيل هذه المواطن الطبيعية، بهدف
+            تعزيز مكانة المملكة العربية السعودية كقائد عالمي في الحفاظ على الشعب المرجانية والسلاحف.</p>
+          </div>
         </div>
       </div>
     </section>
-
-    <script>
-      function scrollToSection(sectionId) {
-        var section = document.getElementById(sectionId);
-        if (section) {
-          section.scrollIntoView({
-            behavior: 'smooth',
-            block: 'center'
-          });
-        }
-      }
-    </script>
-
-
   </main>
 
   <footer class="footer-container">
