--- a/project.html
+++ b/project.html
@@ -178,14 +178,17 @@
       <div class="container">
         <h3 class="page__title">مشاريع مستمرة</h3>
         <div class="project__content">
-          <span class="project__date">08 نوفمبر 2023</span>
-          <h4 class="project__title">تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في
-            البحر الأحمر و
-            جامعة_جازان، بهدف تعزيز
-            التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في مجال الدراسات، والأبحاث التطويرية، والتدريب
-          </h4>
+          <div class="project__heading">
+            <span class="project__date">08 نوفمبر 2023</span>
+            <h4 class="project__title">تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في
+              البحر الأحمر و
+              جامعة_جازان، بهدف تعزيز
+              التعاون المشترك في عدة مجالات يشمل هذا التعاون الفعال التبادل في مجال الدراسات، والأبحاث التطويرية،
+              والتدريب
+            </h4>
+          </div>
           <div class="project__img">
-            <img src="./assets/img/dynamic/project-1.jpg" alt="project" />
+            <img src="./assets/img/dynamic/project-2.jpg" alt="project" />
           </div>
           <div class="project__desc">
             <p>تم توقيع مذكرة تفاهم بين المؤسسة العامة للمحافظة على الشعب_المرجانية والسلاحف في البحر الأحمر و
@@ -517,10 +520,6 @@
         </div>
       </div>
   </footer>
-  <script src="./assets/js/glide.min.js"></script>
-  <script>
-
-  </script>
 
 </body>
 
