--- a/contact.html
+++ b/contact.html
@@ -178,12 +178,70 @@
     <section class="contact-page">
       <div class="container">
         <div class="row">
-          <div class="col-12 col-md-6 a">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt debitis
-            perspiciatis, odit ex excepturi iure necessitatibus vero laborum fugit magnam impedit dolor minima. Sint
-            corrupti voluptate iste at sit repudiandae.</div>
-          <div class="col-12 col-md-6 b">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quasi
-            repellat suscipit tempore voluptas porro ut ipsa quam debitis nobis, animi vitae aut nesciunt ex accusantium
-            labore sunt possimus quod?</div>
+          <div class="col-12 col-md-6 ">
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt debitis
+              perspiciatis, odit ex excepturi iure necessitatibus vero laborum fugit magnam impedit dolor minima.
+              Sint
+              corrupti voluptate iste at sit repudiandae.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt debitis
+              perspiciatis, odit ex excepturi iure necessitatibus vero laborum fugit magnam impedit dolor minima.
+              Sint
+              corrupti voluptate iste at sit repudiandae.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt debitis
+              perspiciatis, odit ex excepturi iure necessitatibus vero laborum fugit magnam impedit dolor minima.
+              Sint
+              corrupti voluptate iste at sit repudiandae.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt debitis
+              perspiciatis, odit ex excepturi iure necessitatibus vero laborum fugit magnam impedit dolor minima.
+              Sint
+              corrupti voluptate iste at sit repudiandae.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt debitis
+              perspiciatis, odit ex excepturi iure necessitatibus vero laborum fugit magnam impedit dolor minima.
+              Sint
+              corrupti voluptate iste at sit repudiandae.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt debitis
+              perspiciatis, odit ex excepturi iure necessitatibus vero laborum fugit magnam impedit dolor minima.
+              Sint
+              corrupti voluptate iste at sit repudiandae.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt debitis
+              perspiciatis, odit ex excepturi iure necessitatibus vero laborum fugit magnam impedit dolor minima.
+              Sint
+              corrupti voluptate iste at sit repudiandae.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt debitis
+              perspiciatis, odit ex excepturi iure necessitatibus vero laborum fugit magnam impedit dolor minima.
+              Sint
+              corrupti voluptate iste at sit repudiandae.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt debitis
+              perspiciatis, odit ex excepturi iure necessitatibus vero laborum fugit magnam impedit dolor minima.
+              Sint
+              corrupti voluptate iste at sit repudiandae.
+            </p>
+        </div>
+          <div class="col-12 col-lg-5 contact__contact-form-section">
+            <div class="contact__contact-form">
+              <div class="contact__form-content">
+                <div class="contact__form-content-contact-form">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt debitis
+                    perspiciatis, odit ex excepturi iure necessitatibus vero laborum fugit magnam impedit dolor minima.
+                    Sint
+                    corrupti voluptate iste at sit repudiandae.
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt debitis
+                    perspiciatis, odit ex excepturi iure necessitatibus vero laborum fugit magnam impedit dolor minima.
+                    Sint
+                    corrupti voluptate iste at sit repudiandae.
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt debitis
+                    perspiciatis, odit ex excepturi iure necessitatibus vero laborum fugit magnam impedit dolor minima.
+                    Sint
+                    corrupti voluptate iste at sit repudiandae.
+                  </p>
+                </div>
+              </div>
+              <div class="contact__contact-form__form-bg"></div>
+            </div>
+          </div>
+          
         </div>
       </div>
     </section>
@@ -482,7 +540,7 @@
               <i class="fa-brands fa-youtube"></i>
             </a>
             <a href="#" class="footer__social-icon">
-              <i class="fa-brands fa-x-twitter"></i>
+              <i class="fa-brands fa-x-contact-form"></i>
             </a>
             <a href="#" class="footer__social-icon">
               <i class="fa-brands fa-linkedin-in"></i>
