--- a/contact.html
+++ b/contact.html
@@ -162,7 +162,7 @@
   <main>
     <section class="section-pattern">
       <div class="section-pattern__pattern">
-        <div class="section-pattern__container">
+        <dectclass="section-pattern__container">
           <img src="./assets/img/dynamic/pattern-tree.svg" class="section-pattern__img" alt="">
         </div>
         <div class="section__content container">
