--- a/contact.html
+++ b/contact.html
@@ -164,11 +164,11 @@
       <div class="section-pattern__pattern">
         <dectclass="section-pattern__container">
           <img src="./assets/img/dynamic/pattern-tree.svg" class="section-pattern__img" alt="">
-        </div>
-        <div class="section__content container">
-          <h3 class="section__title">تواصل معنا</h3>
-          <a href="#content" class="section__btn"><i class="fa-solid fa-chevron-down"></i></a>
-        </div>
+      </div>
+      <div class="section__content container">
+        <h3 class="section__title">تواصل معنا</h3>
+        <a href="#content" class="section__btn"><i class="fa-solid fa-chevron-down"></i></a>
+      </div>
       </div>
       <div class="section-pattern__banner">
         <img src="./assets/img/dynamic/media-center-bg.webp" alt="section banner" />
@@ -178,7 +178,7 @@
     <section class="contact-page">
       <div class="container">
         <div class="row">
-          <div class="col-12 col-md-6 ">
+          <div class="col-12 col-md-6 bg-mint">
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt debitis
               perspiciatis, odit ex excepturi iure necessitatibus vero laborum fugit magnam impedit dolor minima.
@@ -217,7 +217,7 @@
               Sint
               corrupti voluptate iste at sit repudiandae.
             </p>
-        </div>
+          </div>
           <div class="col-12 col-lg-5 contact__contact-form-section">
             <div class="contact__contact-form">
               <div class="contact__form-content">
@@ -242,7 +242,7 @@
               <div class="contact__contact-form__form-bg"></div>
             </div>
           </div>
-          
+
         </div>
       </div>
     </section>
