--- a/contact.html
+++ b/contact.html
@@ -175,7 +175,7 @@
       </div>
     </section>
 
-    <section class="contact-page">
+    <section class="contact-page bg-mint">
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-6 ">
